--- a/views/main_window.ui
+++ b/views/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>982</width>
-    <height>715</height>
+    <width>776</width>
+    <height>687</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -185,7 +185,7 @@ border: none;</string>
      </rect>
     </property>
    </widget>
-   <widget class="QWidget" name="widget" native="true">
+   <widget class="Canvas" name="widget" native="true">
     <property name="geometry">
      <rect>
       <x>100</x>
@@ -204,7 +204,7 @@ border: none;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>982</width>
+     <width>776</width>
      <height>21</height>
     </rect>
    </property>
@@ -223,6 +223,14 @@ border: none;</string>
    </property>
   </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Canvas</class>
+   <extends>QWidget</extends>
+   <header>canvas.py</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
